--- a/index.html
+++ b/index.html
@@ -14,44 +14,22 @@
 
     <div class="content">
         <p>
-            <span class="c2">Black</span> is a very simple color, but it is very special. 
-            We see <span class="c3">black</span> in many things around us. 
-            For example, the night sky looks <span class="c4">black</span>. 
-            When we look at the <span class="c5">black</span> sky, we feel calm and peaceful.
-
-            <br><br>
-
-            Many people like to wear <span class="c6">black</span> clothes.
-            For example, if someone wears a <span class="c7">black</span> shirt or a <span class="c8">black</span> dress, they look smart and confident. 
-            In school programs or parties, many people choose <span class="c9">black</span> because it looks neat and beautiful.
-
-            <br><br>
-
-            <span class="c10">Black</span> is also used in important jobs.
-            For example, judges wear <span class="c11">black</span> coats.
-            Some business people like <span class="c12">black</span> cars because <span class="c13">black</span> looks strong and powerful.
-
-            <br><br>
-
-            <span class="c14">Black</span> matches with every color. 
-            If we mix <span class="c15">black</span> with red, it looks bold. 
-            If we mix <span class="c16">black</span> with yellow, it looks bright. 
-            That is why <span class="c17">black</span> is a very useful color.
-
-            <br><br>
-
-            Sometimes people think <span class="c18">black</span> means sadness, but <span class="c19">black</span> also means strength and confidence. 
-            When we close our eyes, we see <span class="c20">black</span>, and it gives rest to our mind.
-
-            <br><br>
-
-            In my opinion, <span class="c21">black</span> is not just a color. 
-            It is a color of power, style, and simplicity.
+            <span class="c2">Black</span> is a simple and powerful color.<br><br>
+            <span class="c3">Black</span> looks strong and confident.<br><br>
+            Many people like to wear <span class="c4">black</span> clothes.<br><br>
+            <span class="c5">Black</span> clothes look smart and stylish.<br><br>
+            The night sky looks <span class="c6">black</span> and peaceful.<br><br>
+            <span class="c7">Black</span> matches with every color.<br><br>
+            <span class="c8">Black</span> with red looks bold.<br><br>
+            <span class="c9">Black</span> with yellow looks bright.<br><br>
+            Sometimes <span class="c10">black</span> means sadness.<br><br>
+            But <span class="c11">Black</span> also means power and elegance.
         </p>
     </div>
 
 </div>
 
 <script src="script.js"></script>
+
 </body>
 </html>
